--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>InfiniteScrollerPoc</title>
-  <base href="/">
+  <base href="/your_project_name/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.css"></head>
+<link rel="stylesheet" href="styles.126a384615a0e03ed87c.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.a4dadbc03350107420a4.js" type="module"></script><script src="runtime-es5.a4dadbc03350107420a4.js" nomodule defer></script><script src="polyfills-es5.5ea45e10053f0b7d82b7.js" nomodule defer></script><script src="polyfills-es2015.61907dbe52a96d0c7c6e.js" type="module"></script><script src="main-es2015.f2b319861e3f3ece1a17.js" type="module"></script><script src="main-es5.f2b319861e3f3ece1a17.js" nomodule defer></script></body>
 </html>
