--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>InfiniteScrollerPoc</title>
-  <base href="/your_project_name/">
+  <base href="/angular-infinite-scroll-directive/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.126a384615a0e03ed87c.css"></head>
