--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>InfiniteScrollerPoc</title>
-  <base href="/angular-infinite-scroll-directive/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.126a384615a0e03ed87c.css"></head>
+<style>body,html{padding:0;margin:0;position:fixed;left:0;right:0;top:0;bottom:0;}</style><link rel="stylesheet" href="styles.5099bdd6031f3ce63e88.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5099bdd6031f3ce63e88.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.a4dadbc03350107420a4.js" type="module"></script><script src="runtime-es5.a4dadbc03350107420a4.js" nomodule defer></script><script src="polyfills-es5.5ea45e10053f0b7d82b7.js" nomodule defer></script><script src="polyfills-es2015.61907dbe52a96d0c7c6e.js" type="module"></script><script src="main-es2015.e76f9f76cabfed34c802.js" type="module"></script><script src="main-es5.e76f9f76cabfed34c802.js" nomodule defer></script></body>
-</html>
+<script src="runtime-es2015.0ecb361c0ce3e0286dcf.js" type="module"></script><script src="runtime-es5.0ecb361c0ce3e0286dcf.js" nomodule defer></script><script src="polyfills-es5.87f4df38910cc9b40e0a.js" nomodule defer></script><script src="polyfills-es2015.ef83bf80a8e4ea775e8f.js" type="module"></script><script src="main-es2015.b6ca7a1bfab72dd8f018.js" type="module"></script><script src="main-es5.b6ca7a1bfab72dd8f018.js" nomodule defer></script>
+
+</body></html>
