--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>InfiniteScrollerPoc</title>
-  <base href="/">
+  <base href="/angular-infinite-scroll-directive">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>body,html{padding:0;margin:0;position:fixed;left:0;right:0;top:0;bottom:0;}</style><link rel="stylesheet" href="styles.5099bdd6031f3ce63e88.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5099bdd6031f3ce63e88.css"></noscript></head>
