--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <base href="/angular-infinite-scroll-directive/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>body,html{padding:0;margin:0;position:fixed;left:0;right:0;top:0;bottom:0;}</style><link rel="stylesheet" href="styles.5099bdd6031f3ce63e88.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5099bdd6031f3ce63e88.css"></noscript></head>
+<style>html,body{padding:0;margin:0;position:fixed;left:0;right:0;top:0;bottom:0}</style><link rel="stylesheet" href="styles.d8e3462989b4db31.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.d8e3462989b4db31.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.53172888cabd66d8726f.js" type="module"></script><script src="runtime-es5.53172888cabd66d8726f.js" nomodule defer></script><script src="polyfills-es5.ce8ba399b0469b094389.js" nomodule defer></script><script src="polyfills-es2015.2e9c7d54f34b446db150.js" type="module"></script><script src="main-es2015.a05bf2692368d0fe884f.js" type="module"></script><script src="main-es5.a05bf2692368d0fe884f.js" nomodule defer></script>
+<script src="runtime.e8527d39603df717.js" type="module"></script><script src="polyfills.9a8be48ee4766eec.js" type="module"></script><script src="main.27ceb53296a266d9.js" type="module"></script>
 
 </body></html>
